# muscadet

./: .gitignore  CONVENTIONS.md  README.md  pyproject.toml  pytest.ini  setup.py
docs/brainstorms/: 2026-03-24-flowin-kn-logic-brainstorm.md  2026-05-01-cyber-mdc-poc-brainstorm.md
docs/plans/: 2026-03-24-feat-flowin-kn-atleast-logic-plan.md  2026-05-01-feat-cyber-mdc-3comp-poc-plan.md
docs/presentations/: cyber_examples.typ
examples/IMDR/: pompeHydrogene.py  test.py
examples/cod3s_first_example/: kb.py  project.py  project.yaml  system.py  tuto.org  viz_specs.yaml
examples/datacenter/: README.md  datacenter_01.py  datacenter_02.py
examples/datacenter_01/: datacenter_01.py
examples/datacenter_02/: datacenter_02.py
examples/failure_modes/: system.py  system_params.xml
examples/isimu/: README.md  __init__.py  cyber_3comp.py  cyber_3comp_model.yaml  cyber_3comp_study.yaml  cyber_3comp_study_exp.yaml  datacenter_lite.py  dil_v2.py  inverter_chain.py  power_plant.py  power_plant_model.yaml  power_plant_study.yaml  rbd_kn.py  trigger_source.py
examples/rbd_01/: system.py  test.py  test_example.py  test_rbd_01.py
examples/rbd_02/: rbd_02.py  system.py  test_example.py  test_rbd_02.py  test_system.py
examples/rbd_03/: rbd_03.py  test_rbd_03.py
examples/rbd_04/: rbd_04.py  test_rbd_04.py
examples/rbd_05/: rbd_05.py  rbd_05_bis.py  sequence.xml
examples/rbd_05/rbd_05_bis/: rbd_05_bis.py  sequence.html
examples/rbd_05/rbd_05_ter/: rbd_05_ter.py  sequences.html  sequences.xml
examples/rbd_05/result/: result.xml
examples/rbd_05_ter/: rbd_05_ter.py  sequences.html  sequences.xml
examples/rbd_06/: rbd_05_bis.py
examples/simplification/: simplify.py
muscadet/: __init__.py  builders.py  cod3s_wrapper.py  core.py  flow.py  obj.py  obj_logic.py  system.py
muscadet/importers/: __init__.py  cod3s_platform.py
muscadet/kb/: datacenter.py  electric.py  hydraulic.py  hydrolic.py  rbd.py
muscadet/utils/: common.py
tests/: kb_project.py  test_auto_connect_available_001.py  test_auto_connect_available_002.py  test_builders.py  test_cod3s_wrapper_001.py  test_cod3s_wrapper_002.py  test_comp_connections_001.py  test_comp_connections_002.py  test_comp_connections_003.py  test_comp_connections_004.py  test_comp_connections_005.py  test_comp_connections_006.py  test_comp_failure_001.py  test_comp_failure_002.py  test_comp_failure_003.py  test_comp_failure_004.py  test_comp_failure_005.py  test_comp_failure_006.py  test_comp_failure_007.py  test_comp_failure_008.py  test_comp_failure_009.py  test_comp_failure_010.py  test_comp_failure_cod3s_001.py  test_comp_failure_cod3s_002.py  test_comp_failure_cod3s_003.py  test_comp_failure_cod3s_delay_001.py  test_default_out_automata.py  test_event_comp_001.py  test_event_comp_002.py  test_event_comp_003.py  test_event_comp_004.py  test_event_comp_005.py  test_flow_in_kn_001.py  test_flow_in_kn_002.py  test_flow_in_or_001.py  test_flow_out_cond_001.py  test_flow_out_cond_002.py  test_flow_out_cond_003.py  test_flow_out_negate_001.py  test_flow_out_tempo.py  (+17 more)
tests/cod3s/: utils.py
tests/cod3s/bd_001/: test_.py  (+1 more)
tests/fixtures/: dil_v2_export.json  minimal_export.json
tests/old_deprecated/: README.md  test_cod3s_wrapper_001.py
(+7 files in other folders)
