[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muscadet"
dynamic = ["version"]
description = "Discrete stochastic flow system modelling library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Roland Donat", email = "roland.donat@gmail.com"},
    {name = "Roland Donat", email = "roland.donat@edgemind.net"},
]
maintainers = [
    {name = "Roland Donat", email = "roland.donat@edgemind.net"},
]
keywords = ["Modelling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.11"
dependencies = [
    # cod3s is pinned to a tag (rather than a floating branch ref) so a
    # downstream consumer (cod3s-platform) gets a deterministic transitive
    # version. Bump in lockstep with the muscadet release that requires
    # new cod3s features (here: cod3s.specs / cod3s.scripts.study_runner).
    "cod3s @ git+https://github.com/edgemind-sas/cod3s.git@1.4.0",
    "graphviz==0.20.1",
]

[project.urls]
Homepage = "https://github.com/edgemind-sas/muscadet"
Repository = "https://github.com/edgemind-sas/muscadet"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "log",
    "log.*",
    "*.log",
    "*.log.*",
]

[tool.uv]
dev-dependencies = [
    "autopep8",
    "black",
    "flake8",
    "ipdb",
    "jedi",
    "packaging",
    "pycodestyle",
    "pydantic",
    "pyflakes",
    "pytest",
    "pytest-pythonpath",
    "pyyaml",
    "rope",
    "yapf",
    "gitpython",
    "jinja2",
    "ruff-lsp",
    "python-lsp-server",
    "pyright",
    "mypy",
]


[tool.setuptools.dynamic]
version = {attr = "muscadet.version.__version__"}

# Dev tools configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires PyCATSHOO native libraries (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
